Improve flexbuilder base test